Modification de index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <div>Bonjour, je m'appelle Stéphane</div>
 <div>J'ai 25ans</div>
 <div>Et je suis un développeur</div>
+<div>Ceci est une modification</div>
