On a fait un dépliant

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<div>Bonjour, je m'appelle Stéphane</div>
-<div>J'ai 25ans</div>
-<div>Et je suis un développeur</div>
-<div>Ceci est une modification</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
-<div>Modif 2</div>
+<head>
+	<link rel="stylesheet" href="./test.css">
+</head>
+<body>
+	<div class="content">
+		<div class="titre">
+			<div>Liste</div>
+			<div class="fleche" onclick="toggleDepliant()">v</div>
+		</div>
+		<div class="depliant">
+			<div class="item">Elem1</div>
+			<div class="item">Elem2</div>
+			<div class="item">Elem3</div>
+		</div>
+	</div>
+
+	<button onclick="toggleDepliant()">Toggle</button>
+	<script type="text/javascript" src="scripts.js"></script>
+</body>
